@@ -1,3 +1,9 @@
+2010-11-11  Sergio Martin <sergio.martin@artica.es>
+
+	* lib/PandoraFMS/Tools.pm
+	util/pandora_recode_db.pl: Added the recode script
+	to the 3.1.1 version
+
 2010-11-08  Sergio Martin <srgio.martin@artica.es>
 
 	* util/pandora_sync_db.pl: Added two special 
